styles/header.less
@import "variables";

header {
  padding: 20px 0;
  position: relative;
  top: 0;

  > .container {
    display: flex;
    align-content: center;
    justify-content: center;
  }
}
header nav {  // TODO make a dropdown menu!?
  display: none;
}

.mq-tablet-critic() {
  header > .container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
  }
}

.mq-l-tablet-critic() {
  header nav {
    display: flex;
    justify-content: center;
    margin: auto 0;
    column-gap: 25px;

    > a {
      font-size: 16px;
      line-height: 21px;
      color: @accent-color !important;
    }
  }
}

.mq-desktop-critic() {
  header {
    padding: 35px 0;

    > .container {
      flex-direction: row;
      justify-content: space-between;
    }
  }
}

